[tool.poetry]
name = "aucservice-api"
version = "1.0.0"
description = "Online auction API"
authors = ["Herman", "Roman", "Adam", "Dzmitry"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
Flask-RESTful = "*"

[tool.poetry.dev-dependencies]
neovim = "*"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
